# Backup_Tutorial_AwesomeModernCPP

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  mkdocs.yml  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/commands/: audit.md  explain.md  minor.md  new-article.md  patch.md  preflight.md  verify-claim.md
.claude/hooks/: block-bare-python.sh
.claude/prompts/: article-factcheck-audit.md  article-rigor-audit.md
.claude/rules/: documents-frontmatter.md
.claude/style/: writing-style.md
.github/: faq.md  learning-with-agents.md
.github/workflows/: build-check.yml  deploy.yml
changelogs/: v0.8.0.md
code/examples/vol3/: 01_container_cache_benchmark.cpp  40_iterator_categories.cpp  42_binary_vs_linear.cpp  44_accumulate_truncation.cpp  46_parallel_asm.cpp  50_string_view_benchmark.cpp  53_print_benchmark.cpp  54_regex_backtracking.cpp  59_cmath_nan.cpp  60_random_distributions.cpp  61_optional_constexpr.cpp  68_source_location.cpp
code/volumn_codes/vol5/ch00-concurrency-fundamentals/: CMakeLists.txt  false_sharing_bench.cpp
code/volumn_codes/vol5/ch01-thread-lifecycle-raii/: 01_thread_creation.cpp  02_thread_arguments_lifetime.cpp  03_raii_thread_guard.cpp  04_thread_local_call_once.cpp  CMakeLists.txt
code/volumn_codes/vol5/ch02-mutex-condition-sync/: 01_mutex_and_guards.cpp  02_deadlock_strategies.cpp  03_condition_variable.cpp  04_shared_mutex.cpp  05_sync_primitives.cpp  CMakeLists.txt
code/volumn_codes/vol5/ch03-atomic-memory-model/: CMakeLists.txt  README.md  atomic_cas_weak_strong_asm.cpp  atomic_default_ctor_verify.cpp  fence_x86_instructions.cpp  memory_order_store_x86.cpp
code/volumn_codes/vol5/ch04-concurrent-data-structures/: 01_bounded_queue.cpp  02_lock_free_basics.cpp  03_spsc_ring_buffer.cpp  CMakeLists.txt
code/volumn_codes/vol5/ch06-async-io-coroutine/: 01_coroutine_basics.cpp  02_awaitable_task.cpp  03_timer_scheduler.cpp  CMakeLists.txt
code/volumn_codes/vol5/ch07-actor-channel/: 01_actor_framework.cpp  02_channel_csp.cpp  CMakeLists.txt
code/volumn_codes/vol5/ch08-debug-testing-perf/: 01_data_race_and_deadlock.cpp  02_sync_strategy_benchmark.cpp  CMakeLists.txt
code/volumn_codes/vol6-performance/ch02/: CMakeLists.txt  README.md  cacheline_locality.cpp  memory_mountain.cpp  pipeline_branch_ilp.cpp  tlb_hugepage.cpp
code/volumn_codes/vol6-performance/ch03/: CMakeLists.txt  README.md  profile-commands.sh  roofline.cpp
code/volumn_codes/vol6-performance/ch04/: CMakeLists.txt  README.md  arithmetic_cost.cpp  backend_memory.cpp  branchless.cpp  loop_opt.cpp  pgo.sh  pgo_demo.cpp  simd.cpp  virtual_devirt.cpp
code/volumn_codes/vol6-performance/ch05/: CMakeLists.txt  README.md  false_sharing.cpp  lock_cost.cpp  scalability.cpp
code/volumn_codes/vol6-performance/ch06/: CMakeLists.txt  README.md  abstraction_sizeof.cpp  exception_cost.cpp  function_sbo.cpp  rvo_move.cpp
code/volumn_codes/vol6-performance/ch07/: CMakeLists.txt  README.md  lto_helper.cpp  lto_main.cpp  opt_levels_blockers.cpp  size_demo.cpp
code/volumn_codes/vol8-labs/lab0-mini-reactor/: CMakeLists.txt  README.md
code/volumn_codes/vol8-labs/lab0-mini-reactor/include/net/: reactor.hpp  unique_fd.hpp
code/volumn_codes/vol8-labs/lab0-mini-reactor/src/: reactor.cpp
code/volumn_codes/vol8-labs/lab0-mini-reactor/tests/: lab0_tests.cpp
code/volumn_codes/vol8/cpp-deep-dives/pointer-semantics/: CMakeLists.txt  borrowed.h  observer_ptr.h  simple_weak_ptr.h  test_borrowed_observer.cpp  test_lifetime_verification.cpp  test_simple_weak_ptr.cpp  test_unsafe_weak_ptr_ub.cpp  unsafe_weak_ptr.h  weak_flag.h  weak_ptr.h  weak_ptr_factory.h
code/volumn_codes/vol8/networking/00-traditional-socket/: CMakeLists.txt  README.md  classic_client.c  classic_server.c
code/volumn_codes/vol8/networking/01-modern-socket/: CMakeLists.txt  README.md  echo_client.cpp  echo_server.cpp  hold_clients.cpp  unique_fd.hpp
documents/: .pages  index.en.md  index.md  tags.md
documents/community/dev/: 02-repo-slimdown.md  index.md
documents/compilation/: 01-compilation-and-linking-overview.md  04-dynamic-libraries-1.md  05-dynamic-library-design.md  07-symbol-missing-and-runtime-loading.md  08-library-search-logic.md
documents/cpp-reference/: index.md
documents/cpp-reference/concurrency/: 01-atomic.md  03-mutex.md  04-jthread.md  index.md
documents/cpp-reference/containers/: 01-span.md  04-array.md  05-initializer-list.md  06-filesystem.md  07-format.md  08-flat-map.md  09-generator.md  10-print.md  11-mdspan.md  index.md
documents/cpp-reference/core-language/: 11-structured-binding.md  12-spaceship-operator.md  13-if-constexpr.md  14-inline-variables.md  15-nested-namespace.md  16-coroutines.md  17-modules.md  18-deducing-this.md  19-stacktrace.md  index.md
documents/cpp-reference/memory/: 05-expected.md  (+1 more)
documents/en/: 404.md  index.md  tags.md
documents/roadmap/: index.md
documents/vol1-fundamentals/: 02-c-language-crash-course.md  03B-cpp98-function-overload-default-args.md  03C-cpp98-classes-and-objects.md  03D-cpp98-inheritance-polymorphism.md  03E-cpp98-operator-overloading.md  03F-cpp98-casts-memory-exceptions.md
documents/vol2-modern-features/: .pages
documents/vol3-standard-library/: 12-object-size-and-trivial-types.md  40-iterator-basics-and-categories.md  index.md
documents/vol4-advanced/: 01-coroutine-basics.md  05-spaceship-operator.md
documents/vol5-concurrency/: index.md
documents/vol6-performance/: 10-asan-family-and-memory-safety.md  11-memory-safety-asan-valgrind.md  12-sanitizer-toolchain-and-memory-safety.md  index.md
documents/vol7-engineering/: 02-file-copier-core-implementation.md  msvc-debugging-internals.md
documents/vol8-domains/: .pages  index.md
documents/vol9-open-source-project-learn/: .pages
scripts/: build.ts  check_bold_rendering.ts  check_nav_reachability.py  cppref_card_generator.py  cppref_manifest.json  tags.py  translate.py  validate_frontmatter.py
todo/: 013-vol4-advanced-topics.md  README.md
todo/archive/: 029-cpp-reference-pages.md
(+715 files in other folders)
